# EOQ_Project_Typewriter

./: README.md  app.py  git-commands.txt  models.py  pyproject.toml  sentences.txt
static/: calculate.js  effect.js  evaluate.js  style.css  timer.js  typewriter.js
template/: index.html
templates/: credits.html  index.html  layout.html  leaderboard.html  rules.html
