[tool.poetry]
name = "type-writer"
version = "0.1.0"
description = ""
authors = ["Sam Elfring <elfringsam@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
postgresqlite = "^0.4.3"
pgcli = "^4.0.1"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
